--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch scss/main.scss:css/style.css"
+    "sass": "sass --watch scss/main.scss:css/not_prefixed/style.css",
+    "prefix": "postcss ./css/not_prefixed/style.css --use autoprefixer -d ./css/",
+    "browserslist": "last 4 versions"
   },
   "author": "",
   "license": "ISC"
